--- a/Aula-nov-20/css/estilo.css
+++ b/Aula-nov-20/css/estilo.css
@@ -83,6 +83,7 @@ a {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-top: 15px;
     gap: 10px;
 }
 
@@ -98,9 +99,7 @@ a {
 .anuncios__produto__imagem {
     width: 20vh;
     height: 20vh;
-	margin-bottom: 10px;
-	padding: 0;
-	margin-left: 70px;
+	margin: 10px auto;
 }
 
 .anuncios__produto__texto {
