--- a/Aula-nov-20/css/estilo.css
+++ b/Aula-nov-20/css/estilo.css
@@ -15,9 +15,10 @@ a {
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 10vh 80vh 10vh;
+    grid-template-rows: 10vh 40vh 70vh 10vh;
     grid-template-areas: 
     "cabecalho cabecalho"
+    "carrossel carrossel"
     "principal principal"
     "rodape rodape";
     
@@ -38,7 +39,8 @@ a {
 }
 
 .cabecalho__logo {
-	height: 50px;
+	line-height: 50px;
+    width: 50px;
     margin-top: 10px;
     margin-left: 10px;
 }
@@ -60,7 +62,6 @@ a {
 .cabecalho__botao img { 
     height: 50px;
     margin-top: 10px;
-    margin-left: 20px;
     
     border: 1px solid white;
 }
@@ -153,6 +154,8 @@ a {
 
 .botao {
 
+    align-self: flex-end;
+
 	border: 3px solid green;
 	padding: 5px 20px;
     border-radius: 10px;
@@ -185,8 +188,8 @@ a {
 
 .menu {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 10vh;
+    right: 5%;
     bottom: 0;
     width: 300px;
     display: none;
@@ -220,10 +223,9 @@ a {
 
 .rodape {
     display: flex;
-    flex-direction: row;
     grid-area: rodape;
-    align-content: center;
     justify-content: center;
+    align-self: flex-end;
 
     border-top: 1px solid gray;
 }
@@ -231,4 +233,48 @@ a {
 .rodape table {
     width: 300px;
     padding: 10px 0;
+}
+
+
+/* --------------------------------- */
+/*           CARROSSEL               */
+/* --------------------------------- */
+
+#slider {
+    grid-area: carrossel;
+    width: auto;
+    border: 1px solid #000; 
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    margin-top: 20px;
+}
+
+.btn-slider {
+    background-color: rgba(0, 0, 0, 0.2);
+    height: 30%;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    transition: all 0.5;
+}
+
+.btn-slider:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: all 1;
+}
+
+#load {
+    width: 100%;
+    height: 5px;
+    margin-top: 25%;
+}
+
+#barra {
+    width: 0%;
+    height: 100%;
+    background-color: rgba(60, 60, 63, 0.4);
 }
