--- a/Aula-nov-20/css/estilo.css
+++ b/Aula-nov-20/css/estilo.css
@@ -194,7 +194,7 @@ a {
     width: 300px;
     display: none;
 
-    background-color: lightgray;
+    background-color: rgba(192,192,192,0.4);
 }
 
 .menu__nav-bar {
